fix: card visibility in chrome

--- a/src/components/common/sections/sections.scss
+++ b/src/components/common/sections/sections.scss
@@ -23,6 +23,7 @@ section {
   }
 
   .section-content {
+    position      : relative;
     background    : white;
     border-radius : 20px;
     box-shadow    : 50px 50px 99px #2222220F;
